Correct the unreadable code sample (white on white)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -528,7 +528,7 @@ pre.sh_sourceCode, pre.sh_sourceCode {
 	border-left: 3px solid #0ec281;
 	border-radius: 0px;
 	background: #242424;
-	color: #f6f3e8;
+	color: #555;
 	margin-top: 7px;
 	margin-bottom: 7px;
 }
